[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Andreas Schnebinger <andi.schnebinger@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring-algorithm = "^0.2"
peg = "0.6.3"
regex = "1.4.2"

[profile.release]
debug = true

